--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,10 @@
 
 /* Définition des principales couleurs */
 :root {
-	--text-color : #fafafa; /* Texte presque blanc */
-	--background: #34495e; /* Fond bleu foncé */
-	--main-green: rgb(26, 188, 156);
-	--active-green: rgb(20, 156, 128);
+	--text-color : #dddbf1; /* Texte presque blanc */
+	--background: #383f51; /* Fond bleu foncé */
+	--main-green: #ab9f9d;
+	--active-green: #d1beb0;
 }
 
 * {
